--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@babel/preset-typescript": "^7.24.7",
     "@biomejs/biome": "1.8.3",
     "@eslint/js": "^9.9.0",
+    "@styled/typescript-styled-plugin": "^1.0.1",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
     "babel-preset-vite": "^1.1.3",
