feat: create appContainer component

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,8 @@
     "paths": {
       "@pages": ["pages/index.ts"],
       "@providers": ["providers/index.ts"],
-      "@components": ["components/index.ts"]
+      "@components": ["components/index.ts"],
+      "@utils": ["utils/index.ts"]
     },
     "plugins": [
       {
